--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="bg-white max-w-md w-full p-6">
         <h1 class="text-4xl font-bold leading-none" id="bigScoreEl">0</h1>
         <p class="text-sm text-gray-700 mb-4">Points</p>
-        <button class="bg-blue-500 text-white w-full rounded-full text-sm" id="startGameBtn">Start Game</button>
+        <button class="bg-blue-500 text-white w-full rounded-full text-sm" id="startGameBtn">Start Game111</button>
 
     </div>
 </div>
